Click to download vcard

--- a/source/index.html
+++ b/source/index.html
@@ -31,10 +31,12 @@
     linear-gradient(rgba(26,35,44,0.95), rgba(0,0,0,0.95)), none;">
     <div class="flex flex-center" style="min-height:100vh">
       <div class="p2 mx-auto sm-col-12 md-col-8 lg-col-6">
+        <a href="/vCard.vcf">
   <div class="atvImg">
        <img src="./images/precomposed.jpg">
        <div class="atvImg-layer" data-img="./images/card.png"></div>
    </div>
+ </a>
         <p class="hide">Tyler Baldwin, programmer and designer. Email me at
           me@tylerbaldwin.com</p>
       </div>
